--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *,
 *::before,
 *::after {
@@ -16,6 +20,10 @@ body {
   height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  font-size: 16px;
 }
 
 a {
