--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -53,6 +56,22 @@ img {
   max-width: 100%;
   display: block;
   height: auto;
+}
+
+@layer base {
+  body {
+    @apply font-roboto;
+  }
+
+  h1,
+  h2,
+  h3,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-righteous;
+  }
 }
 
 @layer components {
